infra/postgres-budgeting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-budgeting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-budgeting
  template:
    metadata:
      labels:
        app: postgres-budgeting
    spec:
      containers:
        - name: postgres-budgeting
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-budgeting-data
      volumes:
        - name: postgres-budgeting-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-budgeting
spec:
  selector:
    app: postgres-budgeting
  ports:
    - protocol: TCP
      port: 5435
      targetPort: 5432
