infra/postgres-common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-common
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-common
  template:
    metadata:
      labels:
        app: postgres-common
    spec:
      containers:
        - name: postgres-common
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-common-data
      volumes:
        - name: postgres-common-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-common
spec:
  selector:
    app: postgres-common
  ports:
    - protocol: TCP
      port: 5436
      targetPort: 5432
