infra/postgres-transaction.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-transaction
  template:
    metadata:
      labels:
        app: postgres-transaction
    spec:
      containers:
        - name: postgres-transaction
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-transaction-data
      volumes:
        - name: postgres-transaction-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-transaction
spec:
  selector:
    app: postgres-transaction
  ports:
    - protocol: TCP
      port: 5434
      targetPort: 5432
