infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: savvy-app.local
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /transaction
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 8081
          - path: /budgeting
            pathType: Prefix
            backend:
              service:
                name: budgeting-service
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
